Some styles for navbar

--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Nunito:wght@400;600;700&family=Roboto&family=Rubik:wght@400;500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div id="triangle-topright"></div>
+    <div class="hero">
+        <div class="hero__navbar navbar">
+            <div class="navbar__logo"><img src="img/logo.svg"></div>
+            <ul class="navbar__navbar-items navbar-items">
+                <li class="navbar-items__item">Home</li>
+                <li class="navbar-items__item">Your benefits</li>
+                <li class="navbar-items__item">Our process</li>
+                <li class="navbar-items__item">Our works</li>
+                <li class="navbar-items__item">Testimonials</li>
+                <li class="navbar-items__item">Start a project</li>
+            </ul>
+            <div class="button">Get started</div>
+        </div>
+        <div class="hero__title">A Digital Product Design Agency</div>
+        <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
+        <div class="hero__image">Get started</div>
+    </div>
 </body>
 
 </html>
