--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 
 <body>
     <div class="hero">
-        <div class="hero__navbar navbar">
-            <div class="navbar__logo"><img src="img/logo.svg"></div>
-            <ul class="navbar__navbar-items navbar-items">
-                <li class="navbar-items__item">Home</li>
-                <li class="navbar-items__item">Your benefits</li>
-                <li class="navbar-items__item">Our process</li>
-                <li class="navbar-items__item">Our works</li>
-                <li class="navbar-items__item">Testimonials</li>
-                <li class="navbar-items__item">Start a project</li>
-            </ul>
-            <div class="button">Get started</div>
+        <div class="bg">
+            <div class="hero__navbar navbar">
+                <div class="navbar__logo"><img src="img/logo.svg"></div>
+                <ul class="navbar__navbar-items navbar-items">
+                    <li class="navbar-items__item">Home</li>
+                    <li class="navbar-items__item">Your benefits</li>
+                    <li class="navbar-items__item">Our process</li>
+                    <li class="navbar-items__item">Our works</li>
+                    <li class="navbar-items__item">Testimonials</li>
+                    <li class="navbar-items__item">Start a project</li>
+                </ul>
+                <div class="button">Get started</div>
+            </div>
+            <div class="hero__title">A Digital Product Design Agency</div>
+            <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
+            <div class="hero_button button">Get started</div>
+
+            <div class="hero__image"><img src="img/hero-main.png"></div>
         </div>
-        <div class="hero__title">A Digital Product Design Agency</div>
-        <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
-        <div class="hero__image">Get started</div>
     </div>
 </body>
 
