responsive background and main page image

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="hero">
-        <div class="bg">
+        <div class="bg hero-bg">
             <div class="hero__navbar navbar">
-                <div class="navbar__logo"><img src="img/logo.svg"></div>
+                <div class="navbar__logo"><img class="navbar__logo-pic" src="img/logo.svg"></div>
                 <ul class="navbar__navbar-items navbar-items">
                     <li class="navbar-items__item">Home</li>
                     <li class="navbar-items__item">Your benefits</li>
@@ -26,10 +26,16 @@
             </div>
             <div class="hero__title">A Digital Product Design Agency</div>
             <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
-            <div class="hero_button button">Get started</div>
+            <div class="button hero_button">Get started</div>
 
-            <div class="hero__image"><img src="img/hero-main.png"></div>
+
         </div>
+        <div class="hero__image-block"><img class="hero__image" src="img/hero-main.png"></div>
+
+    </div>
+
+    <div class="what-you-get">
+        <div class="what-you-get_title"></div>
     </div>
 </body>
 
