what-you-get page data and basic tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="hero">
         <div class="bg hero-bg">
             <div class="hero__navbar navbar">
-                <div class="navbar__logo"><img class="navbar__logo-pic" src="img/logo.svg"></div>
+                <div class="navbar__logo"><img class="navbar__logo-pic" src="img/hero/logo.svg"></div>
                 <ul class="navbar__navbar-items navbar-items">
                     <li class="navbar-items__item">Home</li>
                     <li class="navbar-items__item">Your benefits</li>
@@ -30,12 +30,52 @@
 
 
         </div>
-        <div class="hero__image-block"><img class="hero__image" src="img/hero-main.png"></div>
+        <div class="hero__image-block"><img class="hero__image" src="img/hero/hero-main.png"></div>
 
     </div>
 
     <div class="what-you-get">
-        <div class="what-you-get_title"></div>
+        <div class="what-you-get__title">We are here to help you with</div>
+        <div class="what-you-get__cards">
+            <div class="what-you-get_cards-card card">
+                <div class="card__icon"><img src="img/what-you-get/grow.svg"></div>
+                <div class="card__title">Grow your business</div>
+                <div class="card__text">The magic wand for success is in figuring out how to bring in the profits and
+                    ensure the capacity needed to sustain that growth for posterity.</div>
+            </div>
+            <div class="what-you-get_cards-card card">
+                <div class="card__icon"><img src="img/what-you-get/sales.svg"></div>
+                <div class="card__title">Drive more sales</div>
+                <div class="card__text">A potential customer, once lost, is hard to retain back. But keeping some
+                    critical factors in mind, we can, for sure, use these loyalty programs as customer retention tools.
+                </div>
+            </div>
+            <div class="what-you-get_cards-card card">
+                <div class="card__icon"><img src="img/what-you-get/expert.svg"></div>
+                <div class="card__title">Handle by Expert</div>
+                <div class="card__text">We know how we candevelop deep, trust-based relationships with our clients, and
+                    work together more collaboratively</div>
+            </div>
+
+            <div class="what-you-get_cards-card card">
+                <div class="card__icon"><img src="img/what-you-get/ux.svg"></div>
+                <div class="card__title">UX Research</div>
+                <div class="card__text">UX research is the systematic study of target users and their requirements, to
+                    add realistic contexts and insights to design processes.</div>
+            </div>
+            <div class="what-you-get_cards-card card">
+                <div class="card__icon"><img src="img/what-you-get/audit.svg"></div>
+                <div class="card__title">Business Audit</div>
+                <div class="card__text">An audit examines your business's financial records to verify they are accurate.
+                    This is done through a systematic review of your transactions. </div>
+            </div>
+            <div class="what-you-get_cards-card card">
+                <div class="card__icon"><img src="img/what-you-get/data.svg"></div>
+                <div class="card__title">Data tracking</div>
+                <div class="card__text">The hardware and software, which when used together allows you to know where
+                    something is at any point in time</div>
+            </div>
+        </div>
     </div>
 </body>
 
