what-you-get resize bug fix

--- a/index.html
+++ b/index.html
@@ -99,6 +99,34 @@
             </div>
         </div>
     </div>
+    <div class="our-process">
+        <div class="bg our-process__bg">
+            <div class="our-process__title">how it works</div>
+            <div class="our-process__subtitle">Our Process</div>
+            <div class="our-process__subtext">We know the best solution for all of your business ideas and we can help
+                you solve all business problems</div>
+            <div class="our-process__cards">
+                <div class="our-process__card">
+                    <div class="our-process__card-image"></div>
+                    <div class="our-process__card-icon"></div>
+                    <div class="our-process__card-title"></div>
+                    <div class="our-process__card-desc"></div>
+                </div>
+                <div class="our-process__card">
+                    <div class="our-process__card-image"></div>
+                    <div class="our-process__card-icon"></div>
+                    <div class="our-process__card-title"></div>
+                    <div class="our-process__card-desc"></div>
+                </div>
+                <div class="our-process__card">
+                    <div class="our-process__card-image"></div>
+                    <div class="our-process__card-icon"></div>
+                    <div class="our-process__card-title"></div>
+                    <div class="our-process__card-desc"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
