what-you-get css

--- a/index.html
+++ b/index.html
@@ -99,30 +99,54 @@
             </div>
         </div>
     </div>
+
     <div class="our-process">
         <div class="bg our-process__bg">
-            <div class="our-process__title">how it works</div>
-            <div class="our-process__subtitle">Our Process</div>
-            <div class="our-process__subtext">We know the best solution for all of your business ideas and we can help
-                you solve all business problems</div>
-            <div class="our-process__cards">
-                <div class="our-process__card">
-                    <div class="our-process__card-image"></div>
-                    <div class="our-process__card-icon"></div>
-                    <div class="our-process__card-title"></div>
-                    <div class="our-process__card-desc"></div>
-                </div>
-                <div class="our-process__card">
-                    <div class="our-process__card-image"></div>
-                    <div class="our-process__card-icon"></div>
-                    <div class="our-process__card-title"></div>
-                    <div class="our-process__card-desc"></div>
-                </div>
-                <div class="our-process__card">
-                    <div class="our-process__card-image"></div>
-                    <div class="our-process__card-icon"></div>
-                    <div class="our-process__card-title"></div>
-                    <div class="our-process__card-desc"></div>
+            <div class="container">
+                <div class="our-process__title">how it works</div>
+                <div class="our-process__subtitle">Our Process</div>
+                <div class="our-process__subtext">We know the best solution for all of your business ideas and we can
+                    help
+                    you solve all business problems</div>
+                <div class="our-process__cards">
+                    <div class="our-process__card">
+                        <div class="our-process__card-image">
+                            <img class="our-process__card-image_pic"
+                                src="img/our-process/graphs/bussines-audit-graph.png">
+                        </div>
+                        <div class="our-process__card-text">
+                            <div class="our-process__card-icon"></div>
+                            <div class="our-process__card-title">Business Audit</div>
+                            <div class="our-process__card-desc">An audit examines your business's financial records to
+                                verify they are accurate. This is done through a systematic review of your transactions.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our-process__card">
+                        <div class="our-process__card-image">
+                            <img class="our-process__card-image_pic"
+                                src="img/our-process/graphs/data-tracking-graph.png">
+                        </div>
+                        <div class="our-process__card-text">
+                            <div class="our-process__card-icon"></div>
+                            <div class="our-process__card-title">Data tracking</div>
+                            <div class="our-process__card-desc">The hardware and software, which when used together
+                                allows
+                                you to know where something is at any point in time</div>
+                        </div>
+                    </div>
+                    <div class="our-process__card">
+                        <div class="our-process__card-image">
+                            <img class="our-process__card-image_pic" src="img/our-process/graphs/results-graph.png">
+                        </div>
+                        <div class="our-process__card-text">
+                            <div class="our-process__card-icon"></div>
+                            <div class="our-process__card-title">Results</div>
+                            <div class="our-process__card-desc">An audit examines your business's financial records to
+                                verify they are accurate. This is done through a systematic review of your transactions.
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
