what-you-get css

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
                                 src="img/our-process/graphs/bussines-audit-graph.png">
                         </div>
                         <div class="our-process__card-text">
-                            <div class="our-process__card-icon"></div>
+                            <div class="our-process__card-icon" style="background-color: #DAE6FF;"><img
+                                    class="our-process__card-svg" src="img/our-process/icons/business-audit-icon.svg">
+                            </div>
                             <div class="our-process__card-title">Business Audit</div>
                             <div class="our-process__card-desc">An audit examines your business's financial records to
                                 verify they are accurate. This is done through a systematic review of your transactions.
@@ -128,7 +130,9 @@
                                 src="img/our-process/graphs/data-tracking-graph.png">
                         </div>
                         <div class="our-process__card-text">
-                            <div class="our-process__card-icon"></div>
+                            <div class="our-process__card-icon" style="background-color: #E9E5FF;"><img
+                                    class="our-process__card-svg" src="img/our-process/icons/data-tracking-icon.svg">
+                            </div>
                             <div class="our-process__card-title">Data tracking</div>
                             <div class="our-process__card-desc">The hardware and software, which when used together
                                 allows
@@ -140,7 +144,8 @@
                             <img class="our-process__card-image_pic" src="img/our-process/graphs/results-graph.png">
                         </div>
                         <div class="our-process__card-text">
-                            <div class="our-process__card-icon"></div>
+                            <div class="our-process__card-icon" style="background-color: #CEEDFF"><img
+                                    class="our-process__card-svg" src="img/our-process/icons/results-icon.svg"></div>
                             <div class="our-process__card-title">Results</div>
                             <div class="our-process__card-desc">An audit examines your business's financial records to
                                 verify they are accurate. This is done through a systematic review of your transactions.
