what-you-get css

--- a/index.html
+++ b/index.html
@@ -156,6 +156,27 @@
             </div>
         </div>
     </div>
+
+    <div class="brands">
+        <div class="container">
+            <div class="brands__title">brands</div>
+            <div class="brands__subtitle">We work with thousands of the world’s leading brands</div>
+            <div class="brands__logos">
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/01-mazda.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/02-atlassian.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/03-smashing.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/04-qantas.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/05-buysellads.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/06-nitro.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/07-cssmania.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/08-popsugar.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/09-talentbin.svg"></div>
+                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/10-civicrm.svg"></div>
+            </div>
+            <div class="brands__footer-text">You're going to be in good company. We work with world's leading brands.
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
