Start-working css

--- a/index.html
+++ b/index.html
@@ -177,6 +177,27 @@
             </div>
         </div>
     </div>
+
+    <div class="start-working">
+        <div class="container">
+            <div class="start-working__left-right">
+                <div class="start-working__left">
+                    <div class="start-working__title">start with us</div>
+                    <div class="start-working__subtitle">Start working faster today</div>
+                    <div class="start-working__desc">We know the best solution for all of your business ideas and we can
+                        help
+                        you
+                        solve all business problems</div>
+                    <div class="button">Get started</div>
+                </div>
+                <div class="start-working__right">
+                    <div class="start-working__chart">
+                        <img class="start-working__chart-img" src="img/start-working/chart.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
