Start-working css

--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="footer__navbar">
+            <img class="footer__logo" src="">
+            <div class="footer__links"></div>
+            <div class="footer__social-media-links"></div>
+        </div>
+        <div class="footer__credentials">
+            <div class="footer_copyright">© 2021 Company</div>
+            <div class="footer__privacy-links">
+                <a href=# class="footer__privacy-link"></a>
+                <a href=# class="footer__privacy-link"></a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
