--- a/index.html
+++ b/index.html
@@ -200,19 +200,39 @@
     </div>
 
     <div class="footer">
-        <div class="footer__navbar">
-            <img class="footer__logo" src="">
-            <div class="footer__links"></div>
-            <div class="footer__social-media-links"></div>
-        </div>
-        <div class="footer__credentials">
-            <div class="footer_copyright">© 2021 Company</div>
-            <div class="footer__privacy-links">
-                <a href=# class="footer__privacy-link"></a>
-                <a href=# class="footer__privacy-link"></a>
+        <div class="container">
+            <div class="footer__navbar">
+                <img class="footer__logo" src="img/footer/logo.png">
+                <div class="footer__links">
+                    <a href="">Home</a>
+                    <a href="">Your benefits</a>
+                    <a href="">Our process</a>
+                    <a href="">Our works</a>
+                    <a href="">Testimonials</a>
+                    <a href="">Start a project</a>
+                </div>
+                <div class="footer__social-media-links">
+                    <a href="" class="footer__social-media-link">
+                        <img class="footer__social-media-link-logo" src="img/footer/fb-logo.png">
+                    </a>
+                    <a href="" class="footer__social-media-link">
+                        <img class="footer__social-media-link-logo" src="img/footer/inst-logo.png">
+                    </a>
+                    <a href="" class="footer__social-media-link">
+                        <img class="footer__social-media-link-logo" src="img/footer/twt-logo.png">
+                    </a>
+                </div>
+            </div>
+            <div class="footer__credentials">
+                <div class="footer_copyright">© 2021 Company</div>
+                <div class="footer__privacy-links">
+                    <a href=# class="footer__privacy-link">Privacy policy</a>
+                    <a href=# class="footer__privacy-link">Term of service</a>
+                </div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
