Some adaptive ss

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="navbar-items__item">Testimonials</li>
                     <li class="navbar-items__item">Start a project</li>
                 </ul>
-                <div class="button">Get started</div>
+                <div class="navbar__button button">Get started</div>
             </div>
             <div class="hero__title">A Digital Product Design Agency</div>
             <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
