--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <div class="what-you-get">
         <div class="bg what-you-get__bg">
             <div class="container">
-                <div class="what-you-get__title">features</div>
-                <div class="what-you-get__subtitle">We are here to help you with</div>
+                <div class="what-you-get__title"><span class="title__green">features</span></div>
+                <div class="what-you-get__subtitle"><span class="subtitle__black">We are here to help you with</span>
+                </div>
                 <div class="what-you-get__cards">
                     <div class="what-you-get_cards-card card">
                         <div class="card__icon" style="background-color: #FFE7DB;"><img class="card__icon-pic"
@@ -103,7 +104,7 @@
     <div class="our-process">
         <div class="bg our-process__bg">
             <div class="container">
-                <div class="our-process__title">how it works</div>
+                <div class="our-process__title"> <span class="title__white">how it works</span></div>
                 <div class="our-process__subtitle">Our Process</div>
                 <div class="our-process__subtext">We know the best solution for all of your business ideas and we can
                     help
