--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="what-you-get">
         <div class="bg what-you-get__bg">
             <div class="container">
-                <div class="what-you-get__title"><span class="title__green">features</span></div>
+                <div class="title"><span class="title__green">features</span></div>
                 <div class="what-you-get__subtitle"><span class="subtitle__black">We are here to help you with</span>
                 </div>
                 <div class="what-you-get__cards">
@@ -104,7 +104,7 @@
     <div class="our-process">
         <div class="bg our-process__bg">
             <div class="container">
-                <div class="our-process__title"> <span class="title__white">how it works</span></div>
+                <div class="title title__center"> <span class="title__white">how it works</span></div>
                 <div class="our-process__subtitle">Our Process</div>
                 <div class="our-process__subtext">We know the best solution for all of your business ideas and we can
                     help
@@ -160,7 +160,7 @@
 
     <div class="brands">
         <div class="container">
-            <div class="brands__title">brands</div>
+            <div class="title"><span class="title__green">brands</span></div>
             <div class="brands__subtitle">We work with thousands of the world’s leading brands</div>
             <div class="brands__logos">
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/01-mazda.svg"></div>
@@ -183,7 +183,7 @@
         <div class="container">
             <div class="start-working__left-right">
                 <div class="start-working__left">
-                    <div class="start-working__title">start with us</div>
+                    <div class="title"><span class="title__white">start with us</span></div>
                     <div class="start-working__subtitle">Start working faster today</div>
                     <div class="start-working__desc">We know the best solution for all of your business ideas and we can
                         help
