Image block fix

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <li class="navbar-items__item">Testimonials</li>
                     <li class="navbar-items__item">Start a project</li>
                 </ul>
-                <div class="navbar__button button">Get started</div>
+                <div class="navbar__button button"><span class="button__text">Get started</span></div>
             </div>
             <div class="hero__title">A Digital Product Design Agency</div>
             <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
-            <div class="button hero_button">Get started</div>
+            <div class="hero_button button"><span class="button__text">Get started</span></div>
 
 
         </div>
@@ -105,7 +105,7 @@
         <div class="bg our-process__bg">
             <div class="container">
                 <div class="title title__center"> <span class="title__white">how it works</span></div>
-                <div class="our-process__subtitle">Our Process</div>
+                <div class="our-process__subtitle"><span class="subtitle__white">Our Process</span></div>
                 <div class="our-process__subtext">We know the best solution for all of your business ideas and we can
                     help
                     you solve all business problems</div>
@@ -161,7 +161,8 @@
     <div class="brands">
         <div class="container">
             <div class="title"><span class="title__green">brands</span></div>
-            <div class="brands__subtitle">We work with thousands of the world’s leading brands</div>
+            <div class="brands__subtitle"><span class="subtitle__black">We work with thousands of the world’s leading
+                    brands</span></div>
             <div class="brands__logos">
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/01-mazda.svg"></div>
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/02-atlassian.svg"></div>
@@ -189,7 +190,7 @@
                         help
                         you
                         solve all business problems</div>
-                    <div class="button">Get started</div>
+                    <div class="button"><span class="button__text">Get started</span></div>
                 </div>
                 <div class="start-working__right">
                     <div class="start-working__chart">
